[gd_scene load_steps=2 format=3 uid="uid://ciwv6j41ji1cp"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_anof5"]

[node name="Pause Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_anof5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.062
anchor_bottom = 0.122
offset_top = 8.0
offset_right = 36.576
offset_bottom = -0.0560074
alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="SettingButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "LEAVE"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
